# sortview

./: .gitignore  CMakeLists.txt  README.md
include/: menu.hpp  qsort.hpp  sortview.hpp  state.hpp
src/: insort.cpp  insort.hpp  main.cpp  menu.cpp  msort.cpp  msort.hpp  qsort.cpp  selsort.cpp  selsort.hpp  sortview.cpp  sortview.hpp  state.cpp
